<resources>
    <string name="app_name">验卡助手</string>
    <string name="login_title">登录到中石化</string>
    <string name="username">用户名</string>
    <string name="password">密码</string>
    <string name="vercode">验证码</string>
    <string name="login">登录</string>
    <string name="username_not_empty">用户名不能为空</string>
    <string name="password_not_empty">密码不能为空</string>
    <string name="login_tips">正在登录中...</string>
    <string name="check_login_status">正在检查登录状态...</string>
    <string name="parseVerCode">正在获取验证码并解析...</string>
    <string name="login_success">登录成功</string>
    <string name="already_login">已登录</string>
    <string name="network_error">网络异常</string>
    <string name="card_id">卡号:</string>
    <string name="card_status">状态:</string>
    <string name="card_status_default">未知</string>
</resources>
