<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            tools:context=".activities.LoginActivity">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="@dimen/title_margin"
                android:layout_marginTop="@dimen/title_margin"
                android:text="@string/login_title"
                android:textSize="@dimen/big_text_size" />

            <com.troy.cardhelper.ui.widget.FloatLabelLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/small_padding"
                app:floatLabelTextAppearance="@style/FloatLabelLayout.Style">

                <EditText
                    android:id="@+id/et_user_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/username"
                    android:maxLines="1"
                    android:singleLine="true" />

            </com.troy.cardhelper.ui.widget.FloatLabelLayout>

            <com.troy.cardhelper.ui.widget.FloatLabelLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/small_padding"
                app:floatLabelTextAppearance="@style/FloatLabelLayout.Style">

                <EditText
                    android:id="@+id/et_pw"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/password"
                    android:inputType="textPassword"
                    android:maxLines="1"
                    android:singleLine="true" />
            </com.troy.cardhelper.ui.widget.FloatLabelLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:visibility="gone">

                <com.troy.cardhelper.ui.widget.FloatLabelLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:padding="@dimen/small_padding"
                    app:floatLabelTextAppearance="@style/FloatLabelLayout.Style">

                    <EditText
                        android:id="@+id/et_ver_code"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/vercode"
                        android:maxLines="1"
                        android:singleLine="true" />
                </com.troy.cardhelper.ui.widget.FloatLabelLayout>

                <ImageView
                    android:id="@+id/iv_verification_code"
                    android:layout_width="70dp"
                    android:layout_height="30dp"
                    android:layout_gravity="center_horizontal|bottom"
                    android:layout_margin="@dimen/noraml_margin" />
            </LinearLayout>
        </LinearLayout>

    </ScrollView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="?android:attr/dividerVertical"></View>

        <Button
            android:id="@+id/btn_login"
            style="?android:buttonBarButtonStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/login" />
    </LinearLayout>
</LinearLayout>